Hiding overflow with css to stop flash of unpositioned elements

--- a/css/examples.css
+++ b/css/examples.css
@@ -91,6 +91,7 @@ body{
 		padding:10px;
 		text-align:center;
 		position:relative;
+		overflow:hidden;
 	}
 
 	.buttons{
